Remove JNI usage warning for SDL2